.metadata/.plugins/org.eclipse.cdt.ui/TuThuoc.build.log
00:21:12 **** Incremental Build of configuration Debug for project TuThuoc ****
make -j8 all 
arm-none-eabi-gcc "C:/Users/BaoThuan/OneDrive - The University of Technology/Desktop/PROJECT/GIT_HUB/BKDN_TuThuoc/0_Driver_stm32/i2c-lcd.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/BaoThuan/OneDrive - The University of Technology/Desktop/PROJECT/GIT_HUB/BKDN_TuThuoc/0_Driver_stm32/0_include" -I"C:/Users/BaoThuan/OneDrive - The University of Technology/Desktop/PROJECT/GIT_HUB/BKDN_TuThuoc/1_Application_stm32/include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"0_Driver_stm32/i2c-lcd.d" -MT"0_Driver_stm32/i2c-lcd.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "0_Driver_stm32/i2c-lcd.o"
In file included from C:/Users/BaoThuan/OneDrive - The University of Technology/Desktop/PROJECT/GIT_HUB/BKDN_TuThuoc/0_Driver_stm32/i2c-lcd.c:14:
C:/Users/BaoThuan/OneDrive - The University of Technology/Desktop/PROJECT/GIT_HUB/BKDN_TuThuoc/0_Driver_stm32/0_include/i2c-lcd.h:60:2: error: unknown type name 'I2C_HandleTypeDef'
   60 |  I2C_HandleTypeDef* I2C;
      |  ^~~~~~~~~~~~~~~~~
C:/Users/BaoThuan/OneDrive - The University of Technology/Desktop/PROJECT/GIT_HUB/BKDN_TuThuoc/0_Driver_stm32/0_include/i2c-lcd.h:74:40: error: unknown type name 'I2C_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   74 | void CLCD_I2C_Init(CLCD_I2C_Name* LCD, I2C_HandleTypeDef* hi2c_CLCD, uint8_t Address, uint8_t Colums, uint8_t Rows);
      |                                        ^~~~~~~~~~~~~~~~~
      |                                        DMA_HandleTypeDef
C:/Users/BaoThuan/OneDrive - The University of Technology/Desktop/PROJECT/GIT_HUB/BKDN_TuThuoc/0_Driver_stm32/i2c-lcd.c: In function 'CLCD_WriteI2C':
C:/Users/BaoThuan/OneDrive - The University of Technology/Desktop/PROJECT/GIT_HUB/BKDN_TuThuoc/0_Driver_stm32/i2c-lcd.c:52:2: warning: implicit declaration of function 'HAL_I2C_Master_Transmit' [-Wimplicit-function-declaration]
   52 |  HAL_I2C_Master_Transmit(LCD->I2C, LCD->ADDRESS, (uint8_t *)Data_I2C, sizeof(Data_I2C), 1000);
      |  ^~~~~~~~~~~~~~~~~~~~~~~
C:/Users/BaoThuan/OneDrive - The University of Technology/Desktop/PROJECT/GIT_HUB/BKDN_TuThuoc/0_Driver_stm32/i2c-lcd.c: At top level:
C:/Users/BaoThuan/OneDrive - The University of Technology/Desktop/PROJECT/GIT_HUB/BKDN_TuThuoc/0_Driver_stm32/i2c-lcd.c:56:40: error: unknown type name 'I2C_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   56 | void CLCD_I2C_Init(CLCD_I2C_Name* LCD, I2C_HandleTypeDef* hi2c_CLCD, uint8_t Address, uint8_t Colums, uint8_t Rows)
      |                                        ^~~~~~~~~~~~~~~~~
      |                                        DMA_HandleTypeDef
make: *** [0_Driver_stm32/subdir.mk:19: 0_Driver_stm32/i2c-lcd.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

00:21:13 Build Failed. 4 errors, 1 warnings. (took 485ms)

